# dev-boost

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.spec  pyproject.toml
.kiro/specs/api-inspector/: design.md  requirements.md  tasks.md
.kiro/specs/desktop-file-optimization-tool/: design.md  requirements.md  tasks.md
.trae/rules/: project_rules.md
devboost/: config.py  main.py  main_cli.py  styles.py  tools_search.py
devboost/tests/: test_pdf_progress_error_handling.py
devboost/tools/: __init__.py  base64_string_encodec.py  block_editor.py  block_widget.py  color_converter.py  cron_expression_editor.py  file_optimization.py  file_rename.py  formatters.py  graphql_client.py  http_client.py  image_optimizer.py  ip_subnet_calculator.py  json_format_validate.py  jwt_debugger.py  lazy_loader.py  llm_client.py  lorem_ipsum_generator.py  markdown_viewer.py  openapi_mock_server.py  pipx_runner.py  random_string_generator.py  regex_tester.py  scratch_blocks.py  scratch_pad.py  scratch_parser.py  string_case_converter.py  timezone_converter.py  unit_converter.py  unix_time_converter.py  url_encode_decode.py  uuid_ulid_generator.py  uvx_runner.py  xml_beautifier.py  yaml_to_json.py
devboost/tools/api_inspector/: __init__.py  api_inspector.py  api_inspector_ui.py
devboost/tools/block_editor/: __init__.py  editor.py  formatters.py  highlighters.py  parser.py  widget.py
devboost/tools/file_optimization/: __init__.py  detector.py  file_manager.py  images.py  manager.py  models.py  pdfs.py  process_runner.py  settings.py  videos.py
devboost/tools/file_optimization/ui/: __init__.py  file_drop_area.py  results_dialog.py
devboost/tools/file_search/: __init__.py  file_search.py
devboost/tools/json_diff/: __init__.py  json_diff.py  json_diff_ui.py
devboost/tools/ripgrep_search/: __init__.py  ripgrep_search.py
devdriver/: main_cli.py
devdriver/tools/: __init__.py  base64_string_encodec.py  json_format_validate.py  jwt_debugger.py  regex_tester.py  test_unix_time_converter.py  unix_time_converter.py  url_encode_decode.py  uuid_ulid_generator.py
docs/: adding-a-new-tool.md  devboost-integration-patterns.md  file-optimization-configuration.md  file-optimization-setup.md  file-optimization-usage.md  function-complexity-report.md  refactoring-checklist.md  refactoring-examples.md  refactoring-plan.md  tasks.md  timezone-tool-analysis.md
docs/checkpoints/: file-search-checkpoint-2025-12-14.md
prompts/: generate-project-rules.md  next-task-implementation.md  task-breakdown.md  ui-developer.md
tests/: test_base64_string_encodec.py  test_block_editor_cursor.py  test_calc_formatter.py  test_color_converter.py  test_config.py  test_cron_expression_editor.py  test_enter_key_handling.py  test_file_optimization.py  test_file_rename.py  test_first_search_result_selection.py  test_graphql_client.py  test_http_client.py  test_image_optimizer.py  test_ip_subnet_calculator.py  test_json_format_validate.py  test_jwt_debugger.py  test_keyboard_shortcuts.py  test_openapi_mock_server.py  test_optimization_settings.py  test_pdf_optimization.py  test_pdf_progress.py  test_pipx_runner.py  test_pipx_runner_filter.py  test_regex_tester.py  test_scratch_pad.py  test_search_debouncing.py  test_search_filtering.py  test_search_input_connection.py  test_search_visual_feedback.py  test_string_case_converter.py  test_timezone_converter.py  test_tool_visibility_management.py  test_tools_search.py  test_unit_converter.py  test_unix_time_converter.py  test_url_encode_decode.py  test_uuid_ulid_generator.py  test_uvx_runner.py  test_uvx_runner_filter.py  test_uvx_runner_integration.py  (+2 more)
